<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/food_menu"
        android:icon="@drawable/ic_food"
        android:title="@string/food"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/cart_menu"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/account_menu"
        android:icon="@drawable/ic_account"
        android:title="@string/account"
        app:showAsAction="ifRoom"/>
</menu>