<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintCheck"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:background="@color/space_cream"
    tools:context=".presentation.tabs.Checkout">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEnterNameCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:hint="@string/your_name"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/color_card"
        app:hintTextColor="@color/white"
        app:helperText="@string/helper_text_name"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_person"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterNameCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_rounded_some"
            android:inputType="text"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEnterPhoneCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginEnd="@dimen/margin_10"
        android:hint="@string/your_phone"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/color_card"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:helperText="@string/helper_text_phone"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/layoutEnterNameCheckout"
        app:layout_constraintStart_toStartOf="@id/layoutEnterNameCheckout"
        app:layout_constraintTop_toBottomOf="@id/layoutEnterNameCheckout"
        app:prefixText="+7"
        app:prefixTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_phone"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterPhoneCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_rounded_some_down"
            android:inputType="phone"
            android:lines="1"
            android:maxLength="10"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitCheckOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        android:background="@drawable/rectangle_rounded_all"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/layoutEnterPhoneCheckout"
        app:layout_constraintStart_toStartOf="@id/layoutEnterPhoneCheckout"
        app:layout_constraintTop_toBottomOf="@id/layoutEnterPhoneCheckout" />
</androidx.constraintlayout.widget.ConstraintLayout>
